@@ -49,7 +49,7 @@ public class UpdateValidateAspect {
                     continue;
                 List<String> parameterList = Arrays.stream(getPermissionName(permission).toLowerCase().split(DELIMITER))
                         .filter(e -> !e.contains("update"))
-                        .collect(Collectors.toList());
+                        .toList();
                 String validTransportMode = getParameterFromPermission(TRANSPORT_MODE_INDEX, parameterList);
                 String validDirection = getParameterFromPermission(DIRECTION_INDEX, parameterList);
                 String validShipmentType = getParameterFromPermission(SHIPMENT_TYPE_INDEX, parameterList);
@@ -100,7 +100,7 @@ public class UpdateValidateAspect {
                     continue;
                 List<String> parameterList = Arrays.stream(getPermissionName(permission).toLowerCase().split(DELIMITER))
                         .filter(e -> !e.contains("update"))
-                        .collect(Collectors.toList());
+                        .toList();
                 String validTransportMode = getParameterFromPermission(TRANSPORT_MODE_INDEX, parameterList);
                 String validDirection = getParameterFromPermission(DIRECTION_INDEX, parameterList);
                 String validShipmentType = getParameterFromPermission(SHIPMENT_TYPE_INDEX, parameterList);
