@@ -89,7 +89,7 @@ public class DbAccessHelper {
             }
         }
 //        List<RunnerEntityMapping> entityMappingList = tableName.entrySet().stream()
-//                        .filter(x -> x.getValue().isContainsText()).map(x -> x.getValue()).collect(Collectors.toList());
+//                        .filter(x -> x.getValue().isContainsText()).map(x -> x.getValue()).toList();
 //        entityMappingList.forEach(c -> {
 //
 //
@@ -342,12 +342,12 @@ public class DbAccessHelper {
                                 if (i instanceof String)
                                     return UUID.fromString((String) i);
                                 return (UUID) i;
-                            }).collect(Collectors.toList());
+                            }).toList();
                     return criteriaBuilder.in(path.get(fieldName)).value(querySet);
                 }
                 if (dataType.isAssignableFrom(Long.class) && input.getValue() != null && input.getValue() instanceof List) {
                     List<Long> querySet = ((List<?>) input.getValue()).stream()
-                            .map(i -> Long.valueOf(String.valueOf(i))).collect(Collectors.toList());
+                            .map(i -> Long.valueOf(String.valueOf(i))).toList();
                     return criteriaBuilder.in(path.get(fieldName)).value(querySet);
                 }
                 if (dataType.isEnum()) {
