@@ -315,7 +315,7 @@ public class AuditLogService implements IAuditLogService {
             fields = getListOfAllFields(prevEntity);
         }
         Map<String, AuditLogChanges> fieldValueMap = new HashMap<>();
-        fields = fields.stream().filter(field -> !filterFieldBasedOnAnnotation(field)).collect(Collectors.toList());
+        fields = fields.stream().filter(field -> !filterFieldBasedOnAnnotation(field)).toList();
         for (Field field : fields) {
 
             String fieldName = field.getName();
