@@ -105,7 +105,7 @@ public class ConsolidationReverseSync implements IConsolidationReverseSync {
                     p.setGuid(item);
                     return p;
                 })
-                .collect(Collectors.toList());
+                .toList();
         response.setShipmentsList(req);
     }
 
@@ -121,7 +121,7 @@ public class ConsolidationReverseSync implements IConsolidationReverseSync {
                         modelMapper.map(item.getEvents(), p.getEventsList());
                     return p;
                 })
-                .collect(Collectors.toList());
+                .toList();
         response.setJobsList(req);
     }
 
@@ -137,7 +137,7 @@ public class ConsolidationReverseSync implements IConsolidationReverseSync {
                     t.setTransporterType(Ownership.valueOf(item.getTransporterTypeString()));
                     return t;
                 })
-                .collect(Collectors.toList());
+                .toList();
         response.setTruckDriverDetails(req);
     }
 
@@ -234,7 +234,7 @@ public class ConsolidationReverseSync implements IConsolidationReverseSync {
             return null;
         return  lst.stream()
                 .map(item -> convertToClass(item, clazz))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private  <T,P> P convertToClass(T obj, Class<P> clazz) {
